--- a/front_end/src/App/styles.css
+++ b/front_end/src/App/styles.css
@@ -3,7 +3,14 @@
 }
 
 body {
-  background: #e6a163;
+  background: rgb(193, 186, 174);
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h3 {
@@ -17,7 +24,6 @@ table {
 .editDiv {
   margin: auto;
   padding: 10px;
-  background-color: #343a40;
 
   span {
     width: 33%;
