--- a/front_end/src/Components/Inventory/styles.css
+++ b/front_end/src/Components/Inventory/styles.css
@@ -20,3 +20,9 @@
 .highlight {
   color: rgb(0, 102, 255) !important;
 }
+
+.nav-button {
+  margin: 0 0.3em;
+  font-size: 14px;
+  border: none;
+}
