--- a/front_end/src/App/styles.css
+++ b/front_end/src/App/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: lightgrey;
+  background: rgb(240, 240, 240);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
